--- a/css/content.css
+++ b/css/content.css
@@ -76,14 +76,20 @@ h4{
     font-size: 20px;
     margin: 0 auto;
     
-  }
+}
   
-  .conclusion a:hover {
+.conclusion a:hover {
     background-color: #ddd;
     color: black;
-  }
+}
   
-  .conclusion a.active {
+.conclusion a.active {
     background-color: #04AA6D;
     color: white;
-  }
+}
+
+@media screen and (max-width: 600px){
+    div {
+        background: blue !important;
+    }
+}
